--- a/ML Hack.ipynb
+++ b/ML Hack.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1286,14 +1286,15 @@
    ],
    "source": [
     "#computing ROC:\n",
-    "print(\"Model 1 score on training: \")\n",
+    "print(\"Model 1 score on training : \")\n",
     "print(accuracy_score(Y_final,tree_model1.predict(X_final))*100)\n",
     "\n",
-    "print(\"Model 2 score on training: \")\n",
+    "print(\"Model 2 score on training model1: \")\n",
     "print(accuracy_score(Y_final,tree_model2.predict(X_final))*100)\n",
     "\n",
-    "print(\"Model 3 score on training: \")\n",
+    "print(\"Model 3 score on training model1: \")\n",
     "print(accuracy_score(Y_final,tree_model3.predict(X_final))*100)\n",
+    "\n",
     "#tree_model1.score(Y_final,V1)\n",
     "\n",
     "#\"Model 2 score on testing and validation: \"\n",
@@ -1302,6 +1303,184 @@
     "#\"Model 3 score on testing and validation: \"\n",
     "#score(X_train,Y3)\n",
     "#score(X_train,V3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIPS 0.0\n",
+      "Population, low access to store, 2010 0.0\n",
+      "Population, low access to store, 2015 0.0\n",
+      "Low income & low access to store, 2010 0.0\n",
+      "Low income & low access to store, 2015 0.0\n",
+      "Households, no car & low access to store, 2010 0.0\n",
+      "Households, no car & low access to store, 2015 0.0\n",
+      "SNAP households, low access to store, 2015 0.0\n",
+      "Children, low access to store, 2010 0.0\n",
+      "Children, low access to store, 2015 0.0\n",
+      "Seniors, low access to store, 2010 0.0\n",
+      "Seniors, low access to store, 2015 0.0\n",
+      "White, low access to store, 2015 0.0\n",
+      "Black, low access to store, 2015 0.0\n",
+      "Hispanic ethnicity, low access to store, 2015 0.0\n",
+      "Asian, low access to store, 2015 0.3711149677732946\n",
+      "American Indian or Alaska Native, low access to store, 2015 0.0\n",
+      "Hawaiian or Pacific Islander, low access to store, 2015 0.0\n",
+      "Multiracial, low access to store, 2015 0.0\n",
+      "Grocery stores, 2009 0.0\n",
+      "Grocery stores/1,000 pop, 2009 0.0\n",
+      "Grocery stores/1,000 pop, 2014 0.26346129477649843\n",
+      "Supercenters & club stores, 2009 0.0\n",
+      "Supercenters & club stores, 2014 0.0\n",
+      "Supercenters & club stores/1,000 pop, 2009 0.0\n",
+      "Supercenters & club stores/1,000 pop, 2014 0.0\n",
+      "Convenience stores, 2009 0.0\n",
+      "Convenience stores, 2014 0.0\n",
+      "Convenience stores/1,000 pop, 2009 0.0\n",
+      "Convenience stores/1,000 pop, 2014 0.0\n",
+      "Specialized food stores, 2009 0.0\n",
+      "Specialized food stores, 2014 0.0\n",
+      "Specialized food stores/1,000 pop, 2009 0.0\n",
+      "Specialized food stores/1,000 pop, 2014 0.0\n",
+      "SNAP-authorized stores, 2012 0.0\n",
+      "SNAP-authorized stores, 2016 0.0\n",
+      "SNAP-authorized stores/1,000 pop, 2012 0.0\n",
+      "SNAP-authorized stores/1,000 pop, 2016 0.0\n",
+      "WIC-authorized stores, 2008 0.0\n",
+      "WIC-authorized stores, 2012 0.0\n",
+      "WIC-authorized stores/1,000 pop, 2008 0.0\n",
+      "WIC-authorized stores/1,000 pop, 2012 0.0\n",
+      "Fast-food restaurants, 2009 0.0\n",
+      "Fast-food restaurants, 2014 0.0\n",
+      "Fast-food restaurants/1,000 pop, 2009 0.0\n",
+      "Fast-food restaurants/1,000 pop, 2014 0.0\n",
+      "Full-service restaurants, 2009 0.0\n",
+      "Full-service restaurants, 2014 0.0\n",
+      "Full-service restaurants/1,000 pop, 2009 0.0\n",
+      "Full-service restaurants/1,000 pop, 2014 0.0\n",
+      "Expenditures per capita, fast food, 2007* 0.0\n",
+      "Expenditures per capita, fast food, 2012* 0.0\n",
+      "Expenditures per capita, restaurants, 2007* 0.0\n",
+      "Expenditures per capita, restaurants, 2012* 0.0\n",
+      "SNAP redemptions/SNAP-authorized stores, 2012 0.0\n",
+      "SNAP redemptions/SNAP-authorized stores, 2016 0.0\n",
+      "SNAP benefits per capita, 2010 0.0\n",
+      "SNAP benefits per capita, 2015 0.0\n",
+      "SNAP online application, 2009* 0.0\n",
+      "SNAP online application, 2016* 0.0\n",
+      "SNAP Combined Application Project , 2009* 0.0\n",
+      "SNAP Combined Application Project , 2016* 0.0\n",
+      "SNAP Broad-based Categorical Eligibility, 2009* 0.0\n",
+      "SNAP Broad-based Categorical Eligibility, 2016* 0.0\n",
+      "SNAP simplified reporting, 2009* 0.0\n",
+      "SNAP simplified reporting, 2016* 0.0\n",
+      "WIC redemptions per capita, 2008 0.0\n",
+      "WIC redemptions per capita, 2012 0.3654237374502069\n",
+      "WIC redemptions/WIC-authorized stores, 2008 0.0\n",
+      "WIC redemptions/WIC-authorized stores, 2012 0.0\n",
+      "FDPIR Sites, 2012 0.0\n",
+      "Price of low-fat milk/national average, 2010** 0.0\n",
+      "Price of sodas/national average, 2010** 0.0\n",
+      "Price of low-fat milk/price of sodas, 2010** 0.0\n",
+      "Soda sales tax, retail stores, 2014* 0.0\n",
+      "Soda sales tax, vending, 2014* 0.0\n",
+      "Chip & pretzel sales tax, retail stores, 2014* 0.0\n",
+      "Chip & pretzel sales tax, vending, 2014* 0.0\n",
+      "General food sales tax, retail stores, 2014* 0.0\n",
+      "Farms with direct sales, 2007 0.0\n",
+      "Farms with direct sales, 2012 0.0\n",
+      "Direct farm sales, 2007 0.0\n",
+      "Direct farm sales, 2012 0.0\n",
+      "Direct farm sales per capita, 2007 0.0\n",
+      "Direct farm sales per capita, 2012 0.0\n",
+      "Farmers' markets, 2009 0.0\n",
+      "Farmers' markets, 2016 0.0\n",
+      "Farmers' markets/1,000 pop, 2009 0.0\n",
+      "Farmers' markets/1,000 pop, 2016 0.0\n",
+      "Farmers' markets that report accepting SNAP, 2016 0.0\n",
+      "Farmers' markets that report accepting WIC, 2016 0.0\n",
+      "Farmers' markets that report accepting WIC Cash, 2016 0.0\n",
+      "Farmers' markets that report accepting SFMNP, 2016 0.0\n",
+      "Farmers' markets that report accepting credit cards, 2016 0.0\n",
+      "Farmers' markets that report selling fruit & vegetables, 2016 0.0\n",
+      "Farmers' markets that report selling animal products, 2016 0.0\n",
+      "Farmers' markets that report selling baked/prepared food products, 2016 0.0\n",
+      "Farmers' markets that report selling other food products, 2016 0.0\n",
+      "Vegetable farms, 2007 0.0\n",
+      "Vegetable farms, 2012 0.0\n",
+      "Vegetable acres harvested, 2007 0.0\n",
+      "Vegetable acres harvested, 2012 0.0\n",
+      "Vegetable acres harvested/1,000 pop, 2007 0.0\n",
+      "Vegetable acres harvested/1,000 pop, 2012 0.0\n",
+      "Farms with vegetables harvested for fresh market, 2007 0.0\n",
+      "Farms with vegetables harvested for fresh market, 2012 0.0\n",
+      "Vegetable acres harvested for fresh market, 2007 0.0\n",
+      "Vegetable acres harvested for fresh market, 2012 0.0\n",
+      "Vegetable acres harvested for fresh market/1,000 pop, 2007 0.0\n",
+      "Vegetable acres harvested for fresh market/1,000 pop, 2012 0.0\n",
+      "Orchard farms, 2007 0.0\n",
+      "Orchard farms, 2012 0.0\n",
+      "Orchard acres, 2007 0.0\n",
+      "Orchard acres, 2012 0.0\n",
+      "Orchard acres/1,000 pop, 2007 0.0\n",
+      "Orchard acres/1,000 pop, 2012 0.0\n",
+      "Berry farms, 2007 0.0\n",
+      "Berry farms, 2012 0.0\n",
+      "Berry acres, 2007 0.0\n",
+      "Berry acres, 2012 0.0\n",
+      "Berry acres/1,000 pop, 2007 0.0\n",
+      "Berry acres/1,000 pop, 2012 0.0\n",
+      "Small slaughterhouse facilities, 2007 0.0\n",
+      "Small slaughterhouse facilities, 2012 0.0\n",
+      "Greenhouse vegetable and fresh herb farms, 2007 0.0\n",
+      "Greenhouse vegetable and fresh herb farms, 2012 0.0\n",
+      "Greenhouse veg and fresh herb sq feet, 2007 0.0\n",
+      "Greenhouse veg and fresh herb sq feet, 2012 0.0\n",
+      "Greenhouse veg and fresh herb sq feet/1,000 pop, 2007 0.0\n",
+      "Greenhouse veg and fresh herb sq feet/1,000 pop, 2012 0.0\n",
+      "Food hubs, 2016 0.0\n",
+      "CSA farms, 2007 0.0\n",
+      "CSA farms, 2012 0.0\n",
+      "Agritourism operations, 2007 0.0\n",
+      "Agritourism operations, 2012 0.0\n",
+      "Agritourism receipts, 2007 0.0\n",
+      "Agritourism receipts, 2012 0.0\n",
+      "Farm to school program, 2009 0.0\n",
+      "Farm to school program, 2013 0.0\n",
+      "Adult diabetes rate, 2008 0.0\n",
+      "Adult diabetes rate, 2013 0.0\n",
+      "Adult obesity rate, 2008 0.0\n",
+      "Adult obesity rate, 2013 0.0\n",
+      "Recreation & fitness facilities, 2009 0.0\n",
+      "Recreation & fitness facilities, 2014 0.0\n",
+      "Recreation & fitness facilities/1,000 pop, 2009 0.0\n",
+      "Recreation & fitness facilities/1,000 pop, 2014 0.0\n",
+      "Median household income, 2015 0.0\n",
+      "Poverty rate, 2015 0.0\n",
+      "Persistent-poverty counties, 2010 0.0\n",
+      "Child poverty rate, 2015 0.0\n",
+      "Persistent-child-poverty counties, 2010 0.0\n",
+      "Metro/nonmetro counties, 2010 0.0\n",
+      "Population-loss counties, 2010 0.0\n",
+      "2010 Census Population 0.0\n",
+      "Population Estimate, 2011 0.0\n",
+      "Population Estimate, 2012 0.0\n",
+      "Population Estimate, 2013 0.0\n",
+      "Population Estimate, 2014 0.0\n",
+      "Population Estimate, 2015 0.0\n",
+      "Population Estimate, 2016 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, importance in zip(X_train.columns, tree_model1.feature_importances_):\n",
+    "    print(name, importance)"
    ]
   },
   {
